--- a/src/components/log_in/log_in.styles.scss
+++ b/src/components/log_in/log_in.styles.scss
@@ -1,3 +1,14 @@
 .log_in {
+  width: 380px;
+  display: flex;
+  flex-direction: column;
+}
 
+.title {
+  margin: 10px 0;
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-between;
 }
